Update gitlab references to github.

--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Andreas Taylor <Andy4495@outlook.com>
 sentence=74'4511 LED Driver Library
 paragraph=
 category=Device Control
-url=http://gitlab.com/Andy4495/LED744511
+url=http://github.com/Andy4495/LED744511
 architectures=*
 includes=LED744511.h
