Update paragraph property.

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.1.2
 author=Andreas Taylor <Andy4495@outlook.com>
 maintainer=Andreas Taylor <Andy4495@outlook.com>
 sentence=74'4511 LED Driver Library
-paragraph=
+paragraph=Arduino library for 74HC4511 BCD to 7-segment driver chip. 
 category=Device Control
 url=http://github.com/Andy4495/LED744511
 architectures=*
